--- a/widgets/layouts/assets/style.css
+++ b/widgets/layouts/assets/style.css
@@ -1,7 +1,7 @@
 /* Links */
 a {
-	text-decoration: none;
-	color: inherit;
+	/* text-decoration: none; */
+	color: var(--template-palette-logo-primary);
 }
 #sidebar a {
 	padding: 2px 10px;
